Fix :hover issue. Add :active state for safari ios compatibility

--- a/src/app/design/editor/ui-editor/ui-editor.component.scss
+++ b/src/app/design/editor/ui-editor/ui-editor.component.scss
@@ -15,7 +15,8 @@
 .dd-move{
     display:none;
 }
-.element:hover .dd-move{
+.element:hover .dd-move,
+.element:active .dd-move{
     display:block;
 }
 
