--- a/src/styles.scss
+++ b/src/styles.scss
@@ -75,6 +75,7 @@ body {
 .bg-reka.ia-unimas-my,
 .bg-reka.ireka-my,
 .bg-reka.dev-ireka-my,
+.bg-reka.alpha-moh-gov-my,
 .bg-reka.aa-unimas-my{
   background-color: #0747a6;
 }
