--- a/src/app/design/editor/lookup-editor/lookup-editor.component.html
+++ b/src/app/design/editor/lookup-editor/lookup-editor.component.html
@@ -343,7 +343,7 @@
               </div>
             }
             @if (lookupEntryList == 0 && !loading && hasLoadList) {
-              <div class="details">
+              <div class="details mt-2">
                 <h3>No data for {{lookup.name}}</h3>
                 <p> There is no data assigned to this lookup table.
                   <br /> You can assign a new data by clicking on the Add button.
