Update mailer warning on dev - explicitly tell only scheduled mailer is disabled
Form
- zerorized uploadProgress on clear file input

List/Screen
- if presetFilter using conf, and there's update during evaluation of start, then reload list (so that latest $conf$ value may be applied)

Start
- Add setTimeout, setInterval override in _eval
- In async function, run $digest$ that will set startTimeout
- clear timeout and interval in onDestroy

--- a/src/app/design/editor/mailer-editor/mailer-editor.component.html
+++ b/src/app/design/editor/mailer-editor/mailer-editor.component.html
@@ -118,7 +118,7 @@
       <div class="p-2">
         @if (!app?.live) {
           <div class="alert alert-warning">
-            <strong>Warning:</strong> Mailer Disabled – App is running in DEV mode.
+            <strong>Warning:</strong> Scheduled Mailer Disabled – App is running in DEV mode.
           </div>
         }
         @if (mailer) {
