Endpoint Manager - Easier param prompt using modal dialog
Lambda Manager
- Easier param prompt using modal dialog

Form
- ms lang support for some features

List
- ms lang support for some features

View
- ms lang support for some features

--- a/src/app/design/editor/endpoint-editor/endpoint-editor.component.html
+++ b/src/app/design/editor/endpoint-editor/endpoint-editor.component.html
@@ -473,3 +473,28 @@ box-shadow: 0 0 5px rgba(109, 207, 246, .5);
     </button>
   </div>
 </ng-template>
+
+<ng-template #endpointPromptTpl let-c="close" let-d="dismiss">
+  <div>
+    <div class="modal-header">
+      <h4 class="modal-title">Run Endpoint</h4>
+    </div>
+    <div class="modal-body">
+      <div class="form form-horizontal">
+        @for (b of params; track $index) {
+          <div class="form-group mb-3">
+            <label class="form-label">{{b}}</label>
+            <input type="text" class="form-control" [(ngModel)]="request[b]"
+              name="{{endpoint.id}}-data-{{b}}" id="{{endpoint.id}}-data-{{b}}">
+          </div>
+        }
+      </div>
+    </div>
+    <div class="modal-footer justify-content-between">
+      <button type="button" class="btn btn-round btn-secondary" (click)="d()">Close</button>
+      <button type="button" class="btn btn-round btn-primary" (click)="c(request)">
+        <i class="icon-minus-sign-alt"></i> Execute Request
+      </button>
+    </div>
+  </div>
+</ng-template>
