Dataset editor - Show default group field
Form Editor
- use shareReplay (instead of share) to cache lookup observable

Form
- Use innerHtml to show grouping toggle and header for child list
- Use shareReplay (instead of share) to cache lookup data
- Update data on server when clear file to ensure data is updated even user doesnt click save (in sync with file removal when user click clear button)

List
- Use innerHtml to show group toggle/header for data

Screen
- Comment out getIcon (not used)

Chatbot
- Comment out getIcon (not used)

--- a/src/app/design/editor/ui-editor/dataset-editor/dataset-editor.component.html
+++ b/src/app/design/editor/ui-editor/dataset-editor/dataset-editor.component.html
@@ -173,6 +173,11 @@
                   <div>
                     Default Sort: <strong>{{curDataset.defSortField}} {{curDataset.defSortDir}}</strong>
                   </div>
+                  @if (curDataset.x?.defGroupField){
+                    <div>
+                      Default Group: {{curDataset.x.defGroupField}}
+                    </div>
+                  }
                   @if (curDataset.showIndex) {
                     <div>
                       <fa-icon [icon]="['fas','list-ol']" [fixedWidth]="true">
